# englishhub-telegram-bot

./: .gitignore  flake.nix  pyproject.toml
scripts/: verify_db.py
src/englishhub_bot/: __init__.py  config.py
src/englishhub_bot/database/: engine.py  models.py
