[project]
name = "englishhub-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "demiurg39", email = "chiryagov2014@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.24.0",
    "aiosqlite>=0.22.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
englishhub-bot = "englishhub_bot:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
